--- a/index.html
+++ b/index.html
@@ -4,33 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survival Craft 2 Server</title>
+    <meta name="description" content="Приєднуйтесь до сервера Survival Craft 2! IP адреса: 172.22.247.68. Дивіться відео та дізнавайтеся більше про Survival Craft, Survivalcraft, Survival Craft 2, Survivalcraft 2, сурвайвлкрафт, сурвайвлкрафт 2 та сурвайвл крафт.">
+    <meta name="keywords" content="Survival Craft, Survivalcraft, Survival Craft 2, Survivalcraft 2, сурвайвлкрафт, сурвайвлкрафт 2, сурвайвл крафт, сервер, IP адреса, відео, Telegram">
     <style>
         body {
-            background-color: #808080; /* сірий фон */
+            background-color: #303030; /* темніший фон */
             color: #fff; /* білий текст */
             font-family: Arial, sans-serif;
-            text-align: center;
             padding: 20px;
+        }
+        h1 {
+            font-size: 2.5em; /* розмір шрифту заголовка */
+            margin-bottom: 20px; /* відступ знизу */
+            text-align: left; /* вирівнювання заголовка зліва */
+        }
+        .content {
+            background-color: #222; /* чорне вікно */
+            padding: 20px;
+            border-radius: 5px; /* закруглені кути */
+            margin-bottom: 20px;
         }
         iframe {
             margin-top: 20px;
-            width: 560px; /* ширина відео */
+            width: 100%; /* ширина 100% */
+            max-width: 560px; /* максимальна ширина відео */
             height: 315px; /* висота відео */
         }
         a {
-            color: #00f; /* колір гіперпосилань */
+            color: #FFD700; /* жовтий колір гіперпосилань */
             text-decoration: none; /* без підкреслення */
         }
         a:hover {
             text-decoration: underline; /* підкреслення при наведенні */
         }
+        .telegram-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #0088cc; /* колір кнопки */
+            color: #fff;
+            border-radius: 5px;
+            text-decoration: none;
+            margin: 5px;
+        }
+        .links {
+            background-color: #222; /* чорне вікно для посилань */
+            padding: 10px;
+            margin-top: 20px;
+            text-align: left; /* вирівнювання тексту зліва */
+        }
     </style>
 </head>
 <body>
     <h1>Сервер Survival Craft 2</h1>
-    <p>IP адреса: <strong>ВАШ_IP_АДРЕС</strong></p>
-    <p>Щоб приєднатися, перегляньте це відео:</p>
-    <iframe src="https://www.youtube.com/embed/0cujQGKQQRs" frameborder="0" allowfullscreen></iframe>
-    <p>Приєднуйтесь до нашого <a href="https://t.me/Connor_Canwey">каналу</a> та <a href="https://t.me/+elB0w_nshPhmZWJi">чату</a> в Telegram.</p>
+    <div class="content">
+        <p>IP адреса: <strong>172.22.247.68</strong></p>
+        <p>Щоб приєднатися, перегляньте це відео:</p>
+        <iframe src="https://www.youtube.com/embed/0cujQGKQQRs" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <p>Приєднуйтесь до нашого <a class="telegram-button" href="https://t.me/Connor_Canwey">каналу в Telegram</a> та <a class="telegram-button" href="https://t.me/+elB0w_nshPhmZWJi">чату в Telegram</a>.</p>
+    <div class="links">
+        <p>Дізнайтеся більше про <strong>Survival Craft</strong>, <strong>Survivalcraft</strong>, <strong>Survival Craft 2</strong>, <strong>Survivalcraft 2</strong>, <strong>сурвайвлкрафт</strong>, <strong>сурвайвлкрафт 2</strong> та <strong>сурвайвл крафт</strong> на нашому сервері!</p>
+    </div>
 </body>
 </html>
