--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survival Craft 2 Server</title>
     <meta name="description" content="Приєднуйтесь до сервера Survival Craft 2! IP адреса: 172.22.247.68. Дивіться відео та дізнавайтеся більше про Survival Craft, Survivalcraft, Survival Craft 2, Survivalcraft 2, сурвайвлкрафт, сурвайвлкрафт 2, сурвайвл крафт, сервер сурвайвлкрафт, сервер сурвайвлкрафт 2, сервер Survival Craft, сервер Survival Craft 2, сервер Survivalcraft, сервер Survivalcraft 2.">
-    <meta name="keywords" content="Survival Craft, Survivalcraft, Survival Craft 2, Survivalcraft 2, сурвайвлкрафт, сурвайвлкрафт 2, сурвайвл крафт, сервер, сервер сурвайвлкрафт, сервер сурвайвлкрафт 2, сервер Survival Craft, сервер Survival Craft 2, сервер Survivalcraft, сервер Survivalcraft 2, IP адреса, відео, Telegram">
+    <meta name="keywords" content="Survival Craft, Survivalcraft, Survival Craft 2, Survivalcraft 2, сурвайвлкрафт, сурвайвлкрафт 2, сурвайвл крафт, сервер, сервер сурвайвлкрафт, сервер сурвайвлкрафт 2, сервер Survival Craft, сервер Survival Craft 2, сервер Survivalcraft, сервер Survivalcraft 2, IP адреса, відео, Telegram, унікальний-тестовий-метатег-для-перевірки-індексації-сайту-на-GitHub-Pages, тестовий-метатег-12345">
     <style>
         body {
             background-color: #303030; /* темніший фон */
@@ -61,34 +61,14 @@
             iframe {
                 height: 200px; /* зменшення висоти відео на малих екранах */
             }
-            .content {
-                padding: 10px; /* зменшення відступів */
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.5em; /* ще більше зменшення заголовка на дуже малих екранах */
-            }
-            iframe {
-                height: 150px; /* ще менша висота відео */
-            }
-            .telegram-button {
-                padding: 8px 16px; /* зменшення розміру кнопок */
-            }
         }
     </style>
 </head>
 <body>
     <h1>Сервер Survival Craft 2</h1>
-    <div class="content">
-        <p>IP адреса: <strong>172.22.247.68</strong></p>
-        <p>Щоб приєднатися, перегляньте це відео:</p>
-        <iframe src="https://www.youtube.com/embed/0cujQGKQQRs" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <p>Приєднуйтесь до нашого <a class="telegram-button" href="https://t.me/Connor_Canwey">каналу в Telegram</a> та <a class="telegram-button" href="https://t.me/+elB0w_nshPhmZWJi">чату в Telegram</a>.</p>
-    <div class="links">
-        <p>Дізнайтеся більше про <strong>Survival Craft</strong>, <strong>Survivalcraft</strong>, <strong>Survival Craft 2</strong>, <strong>Survivalcraft 2</strong>, <strong>сурвайвлкрафт</strong>, <strong>сурвайвлкрафт 2</strong>, <strong>сурвайвл крафт</strong>, <strong>сервер сурвайвлкрафт</strong>, <strong>сервер сурвайвлкрафт 2</strong>, <strong>сервер Survival Craft</strong>, <strong>сервер Survival Craft 2</strong>, <strong>сервер Survivalcraft</strong>, <strong>сервер Survivalcraft 2</strong> на нашому сервері!</p>
-    </div>
+    <p>IP адреса: <strong>172.22.247.68</strong></p>
+    <p>Щоб приєднатися, перегляньте це відео:</p>
+    <iframe src="https://www.youtube.com/embed/0cujQGKQQRs" frameborder="0" allowfullscreen></iframe>
+    <p>Приєднуйтесь до нашого <a class="telegram-button" href="https://t.me/Connor_Canwey">каналу</a> та <a class="telegram-button" href="https://t.me/+elB0w_nshPhmZWJi">чату</a> в Telegram.</p>
 </body>
 </html>
